# wgsl_ln

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: dedup.rs  hello_world.rs  naga_oil.rs  vertex.rs
src/: __wgsl_paste2.rs  lib.rs  open_close.rs  pasting.rs  sanitize.rs  to_wgsl_string.rs  wgsl2.rs  wgsl_export2.rs  wgsl_export_macro.rs  wgsl_macro.rs
