[package]
name = "wgsl_ln"
version = "0.2.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/wgsl_ln"
description = """
Experimental crate for writing wgsl in rust!
"""
keywords = ["wgsl", "shader"]

[features]
## Enable support for the `naga_oil` crate.
naga_oil = []

[profile.dev.package.naga]
debug-assertions=true

[profile.release.package.naga]
debug-assertions=true

[lib]
proc-macro = true

[dependencies]
naga = { version = "0.20.0", features = ["wgsl-in"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.36"
